--- a/style.css
+++ b/style.css
@@ -318,10 +318,16 @@ body {
     display: none;
 }
 
+.navbar__menu--logo-picture-2 {
+    display: none;
+}
+
 @media (min-width: 1440px) {
     .navbar_menu {
         display: none;
-    }   
+    }
+
+
 
     .header__navbar--left-elements {
         list-style-type: none;
