--- a/style.css
+++ b/style.css
@@ -1924,6 +1924,17 @@ video {
     }
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
 
 @media (min-width: 1440px) {
     .slider {
